fix slider thumb overflow to always be visible, use percent instead of vw in ha-tab-group width calculation

--- a/src/css/ha-slider.css
+++ b/src/css/ha-slider.css
@@ -46,6 +46,7 @@
 
 /* Thumb negative area */
 #thumb {
+	overflow: visible;
 	background: var(--ha-slider-thumb-negative-color);
 	border-radius: 0;
 	transition:
