--- a/src/css/hui-root.css
+++ b/src/css/hui-root.css
@@ -103,7 +103,7 @@ ha-button-menu,
 /* Turn view tabs into a separate footer */
 ha-tab-group {
 	min-height: var(--footer-height);
-	width: calc(100vw - var(--mdc-drawer-width, 0px));
+	width: calc(100% - var(--mdc-drawer-width, 0px));
 	inset-inline-start: var(--mdc-drawer-width, 0);
 	margin: 0;
 	margin-inline: 0;
